--- a/photography/about.html
+++ b/photography/about.html
@@ -60,19 +60,23 @@
 					<img src="img/extra-img.png"/>
 				</div>
 				<div class="aside_center">
-					<h2>摄影</h2>
-					<img src="img/1page-img.jpg" alt="juzi" />
-					
-					<p>伊犁哈萨克自治州，简称伊犁州、伊犁，地处新疆维吾尔自治区西部天山北部的伊犁河谷内，伊犁被誉为“塞外江南”、
-					“中亚湿岛”，“花城”，伊宁市是伊犁州的首府。2012年入选“2012年中国特色魅力城市200强”。</p>
+					<h2>关于摄影</h2>
+					<div class="aside_c_top">
+						<img src="img/2page-img1.jpg" alt="juzi" />
+						<span>所拍摄的人们所具有的无穷魅力，源于一种内在的力量。这是隐藏在每个人身上的难以形容的秘密的一部分，
+						我的工作就是用胶片抓住它。<br><i>——约瑟夫·卡什</i></span>
+					</div>
+					<div class="aside_c_bottom">
+						<p>拍照等同于发现自己的欲望，因为摄影是一个对象化的过程。每个人都是有欲望的，当然欲望的实质会因人而异。先拍
+						一张照片，然后拍一张，之后再拍一张，这种一张张的重复累积变成一定的量，当这个量变成大的数目，从中就会产生质。
+						这个量和质归根到底是这个人的欲望实体，也是他的表现方式。</p>
+					</div>
 				</div>
 				<div class="aside_right">
-					<h2>新消息</h2>
-					<ul>
-						<li><a href="#">对于免费的时间<br></a>总是得不到我们的珍惜</li>
-						<li><a href="#">对于大自然的环境<br></a>有谁时时刻刻记得去保护</li>
-						<li><a href="#">依靠约束的行动力<br></a>可以坚持到几时</li>
-					</ul>
+					<h2>工作</h2>
+					<img src="img/2page-img2.jpg"/>
+					<p>摄影是一种神奇的记录：照片记录了时间、风景、人物；可回放照片时才发现，原来它还记录了按下快门时的感触、
+					思绪、心事……也许这就是为什么明明看到的是一张风景，却会让你想起谁。</p>
 				</div>
 			</div>
 		</div>
