--- a/photography/gallery.html
+++ b/photography/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8">
 		<title>photography</title>
 		<link rel="stylesheet" href="css/myCss.css" />
 		<script src="jquery-2.1.0.js"></script>
@@ -59,20 +59,14 @@
 					</ul>
 					<img src="img/extra-img.png"/>
 				</div>
-				<div class="aside_center">
-					<h2>摄影</h2>
-					<img src="img/1page-img.jpg" alt="juzi" />
-					
-					<p>伊犁哈萨克自治州，简称伊犁州、伊犁，地处新疆维吾尔自治区西部天山北部的伊犁河谷内，伊犁被誉为“塞外江南”、
-					“中亚湿岛”，“花城”，伊宁市是伊犁州的首府。2012年入选“2012年中国特色魅力城市200强”。</p>
-				</div>
-				<div class="aside_right">
-					<h2>新消息</h2>
-					<ul>
-						<li><a href="#">对于免费的时间<br></a>总是得不到我们的珍惜</li>
-						<li><a href="#">对于大自然的环境<br></a>有谁时时刻刻记得去保护</li>
-						<li><a href="#">依靠约束的行动力<br></a>可以坚持到几时</li>
-					</ul>
+				<div class="aside_aside">
+					<h2>关于照片</h2>
+					<p>花开四季皆应景，即是天生地造成。华红叶绿草青青，桃花艳，梨花浓，杏花茂盛，扑人面的杨花飞满诚。
+					夏季里，端阳五月天，火红的石榴白玉簪，爱它一阵黄啊黄昏雨，出水的荷花，亭亭玉立在晚风前。秋季里，天高气转凉，
+					登高赏菊过重阳，枫叶留丹就在那秋山上，丹桂飘飘分外香。冬季里雪纷纷，梅花雪里显精神，水仙在案头添呀添风韵，
+					迎春花开一片金，我一言说不尽。春夏秋冬花似锦，却怎么还有不爱花的人。爱花的人，惜花护花把花养，恨花的人，
+					厌花骂花把花伤。牡丹本是花中王，华中的君子压群芳，百花相比无颜色，他偏说，牡丹虽美花不香。玫瑰花开香又美，
+					他又说，玫瑰有刺扎得慌。</p>
 				</div>
 			</div>
 		</div>
