--- a/photography/contact.html
+++ b/photography/contact.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>photography</title>
+		<<title>photography</title>
 		<link rel="stylesheet" href="css/myCss.css" />
 		<script src="jquery-2.1.0.js"></script>
 		<script src="js/myJs.js"></script>
@@ -59,14 +59,14 @@
 					</ul>
 					<img src="img/extra-img.png"/>
 				</div>
-				<div class="aside_aside">
-					<h2>关于照片</h2>
-					<p>花开四季皆应景，即是天生地造成。华红叶绿草青青，桃花艳，梨花浓，杏花茂盛，扑人面的杨花飞满诚。
-					夏季里，端阳五月天，火红的石榴白玉簪，爱它一阵黄啊黄昏雨，出水的荷花，亭亭玉立在晚风前。秋季里，天高气转凉，
-					登高赏菊过重阳，枫叶留丹就在那秋山上，丹桂飘飘分外香。冬季里雪纷纷，梅花雪里显精神，水仙在案头添呀添风韵，
-					迎春花开一片金，我一言说不尽。春夏秋冬花似锦，却怎么还有不爱花的人。爱花的人，惜花护花把花养，恨花的人，
-					厌花骂花把花伤。牡丹本是花中王，华中的君子压群芳，百花相比无颜色，他偏说，牡丹虽美花不香。玫瑰花开香又美，
-					他又说，玫瑰有刺扎得慌。</p>
+				<div class="aside_contact">
+					<h2>联系我</h2>
+					<form>
+						姓名：<input type="text" /><br>
+						邮箱：<input type="text" /><br>
+						信息：<textarea></textarea><br>
+						<a href="#">提交</a>
+					</form>
 				</div>
 			</div>
 		</div>
