--- a/photography/sitemap.html
+++ b/photography/sitemap.html
@@ -50,23 +50,20 @@
 		<div class="aside">
 			<div class="aside_con">
 				<div class="aside_left">
-					<h2>拍摄地点</h2>
+					<h2>网站地图</h2>
 					<ul>
-						<li><a href="#">南迦巴瓦峰</a></li>
-						<li><a href="#">伊犁</a></li>
-						<li><a href="#">阿尔山</a></li>
-						<li><a href="#">茶卡盐湖</a></li>
+						<li><a href="index.html">首页</a></li>
+						<li><a href="gallery.html">画廊</a></li>
+						<li><a href="privacy.html">隐私</a></li>
+						<li><a href="about.html">关于</a></li>
+						<li><a href="contact.html">联系</a></li>
 					</ul>
-					<img src="img/extra-img.png"/>
 				</div>
 				<div class="aside_aside">
-					<h2>关于照片</h2>
-					<p>花开四季皆应景，即是天生地造成。华红叶绿草青青，桃花艳，梨花浓，杏花茂盛，扑人面的杨花飞满诚。
-					夏季里，端阳五月天，火红的石榴白玉簪，爱它一阵黄啊黄昏雨，出水的荷花，亭亭玉立在晚风前。秋季里，天高气转凉，
-					登高赏菊过重阳，枫叶留丹就在那秋山上，丹桂飘飘分外香。冬季里雪纷纷，梅花雪里显精神，水仙在案头添呀添风韵，
-					迎春花开一片金，我一言说不尽。春夏秋冬花似锦，却怎么还有不爱花的人。爱花的人，惜花护花把花养，恨花的人，
-					厌花骂花把花伤。牡丹本是花中王，华中的君子压群芳，百花相比无颜色，他偏说，牡丹虽美花不香。玫瑰花开香又美，
-					他又说，玫瑰有刺扎得慌。</p>
+					<h2>Photoraphy</h2>
+					<p>能令万里近，不觉四时行。晕染花香馥，光含乐镜清。<br>自矜彩色重，宁忆黑白真。逐景如独舞，天地谁知闻。<br>
+					寸镜含天姿，调光有殊智。无间已得象，象外更生意。<br>千里摄名山，万里照云泉。遂令江海客，惆怅忆故园。<br>
+					胶卷已封不可窥，照时唯有鬼神知。<br>冲罢恰逢云游客，认得天山最老枝。</p>
 				</div>
 			</div>
 		</div>
