--- a/photography/about.html
+++ b/photography/about.html
@@ -15,10 +15,10 @@
 				<ul class="nav_ul">
 					<li><a href="index.html">首页</a></li>
 					<li><a href="gallery.html">画廊</a></li>
-					<li><a href="#">隐私</a></li>
+					<li><a href="privacy.html">隐私</a></li>
 					<li><a href="about.html">关于</a></li>
-					<li><a href="#">联系</a></li>
-					<li><a href="#">网站地图</a></li>
+					<li><a href="contact.html">联系</a></li>
+					<li><a href="sitemap.html">网站地图</a></li>
 				</ul>
 			</div>
 		</div>
